# BarberQueue

./: .gitattributes  .gitignore  .php-cs-fixer.php  .pre-commit-config.yaml  README.md  composer.json  pyproject.toml  pytest.ini
backend/: .php-cs-fixer.php  bootstrap.php  composer.json  index.php
backend/App/Attributes/: HttpRoute.php  Route.php
backend/App/Config/: DbConfig.php
backend/App/Controllers/: BaseController.php  HealthController.php  HomeController.php  LandingController.php
backend/App/Controllers/Auth/: ForgotPasswordController.php  LoginController.php  (+2 more)
backend/App/Core/: Container.php  HttpHeader.php  HttpResponse.php  HttpStatus.php  Router.php
backend/App/Middleware/: CorsMiddleware.php
backend/App/Routing/: BaseRoute.php
backend/App/Utils/: ClassesDiscovery.php  OutputUtils.php  TextUtils.php  UriUtils.php
backend/App/core/: HeaderType.php
backend/Config/: DbConfig.php
database/: creation.sql  insertions.sql
frontend/src/: App.jsx  index.css
frontend/src/pages/: ForgotPassword.jsx  Landing.jsx  Login.jsx  Register.jsx  ResetPassword.jsx
frontend/src/styles/: landing.css  login.css
public/: index.php
public/css/_partials/: _footer.css  _nav.css
public/views/_partials/: _footer.php  _header.php  _nav.php
public/views/start/: landing.php
scripts/: install-db.php
scripts/Utils/: DatabaseInstaller.php  OutputUtils.php
src/: bootstrap.php  composer.json
src/App/Components/: Tab.php
src/App/Controllers/: BaseController.php  HealthController.php  HomeController.php  LandingController.php
src/App/Core/: Router.php  UriCache.php  View.php
src/App/Routing/: BaseRoute.php
src/App/Utils/: ArrayUtils.php  TextUtils.php  UriUtils.php
src/Config/: DbConfig.php  RoutesConfig.php
src/app/Components/: Alert.php  BaseComponent.php
src/app/Controllers/: BaseController.php  HealthController.php  HomeController.php
src/app/Core/: Route.php  Router.php  Template.php  UriCache.php  View.php  WebRoutes.php
src/app/Domain/: HeaderType.php
src/app/Routing/: RoutesCollection.php
src/app/Utils/: ConsoleOutput.php  GeneralUtils.php  Output.php  OutputUtils.php  TextUtils.php  UriCache.php  UriUtils.php
src/app/core/: HeaderType.php
src/config/: BaseRoute.php  Routes.php  RoutesCollection.php  RoutesConfig.php  WebRoutes.php  db.php  routes.php
src/db/: creation.sql  install.php
src/public/: health.php  index.php
tests/: conftest.py  header_type.py  http_header.py  http_status.py  locators.py  pyproject.toml
tests/backend/: test_health.py  test_invalid_route.py
tests/frontend/: test_landing.py
tests/test_connection/: test_health.py  test_invalid_route.py  test_page_not_found.py
tests/views/: test_home.py
(+17 files in other folders)
