[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barberqueue-tests"
version = "0.1.0"
description = "Test suite for BarberQueue."
requires-python = ">=3.13.9"

[project.optional-dependencies]
dev = ["pytest", "pytest-html", "selenium", "ruff", "pyright"]

# Tool configs

[tool.setuptools]
package-dir = { "" = "tests" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--html=tests/results/report.html --self-contained-html -v"

[tool.ruff]
fix = true
preview = true
line-length = 88
indent-width = 4

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72
skip-magic-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.pyright]
typeCheckingMode = "standard"
