[project]
name = "barberqueue-tests"
version = "0.1.0"
description = "Test suite for BarberQueue."
requires-python = ">=3.13.9"
dependencies = [
    "pytest>=9.0.2",
    "pytest-html>=4.2.0",
    "requests>=2.32.5",
    "selenium>=4.40.0",
]

[dependency-groups]
dev = ["pyright>=1.1.408", "ruff>=0.15.0"]

# Tool configs

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--html=tests/results/report.html --self-contained-html -v"

[tool.ruff]
src = ["tests"]
fix = true
preview = true
line-length = 88
indent-width = 4

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72
skip-magic-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.pyright]
typeCheckingMode = "standard"
